--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                 top: -1366px;
                 right: -113px;
                 z-index: 10;
-                background-color: #053335;
+                /* background-color: #053335; */
                 color: white;
+                padding-right: 105px;
             }
 
             .language{
@@ -86,8 +87,9 @@
                 top: -1204px;
                 right: -113px;
                 z-index: 10;
-                background-color: #053335;
+                /* background-color: #053335; */
                 color: white;
+                padding-right: 105px;
             }
 
             .skill{
@@ -172,15 +174,15 @@
     <label class="skill">Skill</label>
     <label class="hobby">Hobby</label>
 
-    <p class="list-contact">Nama : Rahmad Ade Akbar</p>
-    <p class="list-contact">Nama : Rahmad Ade Akbar</p>
-    <p class="list-contact">Nama : Rahmad Ade Akbar</p>
-    <p class="list-contact">Nama : Rahmad Ade Akbar</p>
+    <h2 class="list-contact">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-contact">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-contact">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-contact">Nama : Rahmad Ade Akbar</h2>
 
-    <p class="list-language">Nama : Rahmad Ade Akbar</p>
-    <p class="list-language">Nama : Rahmad Ade Akbar</p>
-    <p class="list-language">Nama : Rahmad Ade Akbar</p>
-    <p class="list-language">Nama : Rahmad Ade Akbar</p>
+    <h2 class="list-language">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-language">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-language">Nama : Rahmad Ade Akbar</h2>
+    <h2 class="list-language">Nama : Rahmad Ade Akbar</h2>
 
     
     <!-- <ul>
