--- a/statis.html
+++ b/statis.html
@@ -3,85 +3,88 @@
 <head>
     <title></title>
     <style>
+		*{
+			margin: 0;
+			/* padding: 0; */
+		}
         .wrap{
 				background: blue;
-				width: 900px;
-				margin: 10px auto;
-			}
+				/* width: 900px; */
+		}
 
-/*bagian header*/
-.wrap .header{
-	background: rgb(38, 157, 204);
-	/*height: 50px;*/
-	padding: 2px 10px;
-	color: white;
-}
+		/*bagian kepala*/
+		.wrap .kepala{
+			background: rgb(38, 157, 204);
+			/*height: 50px;*/
+			padding: 20px 30px;
+			color: white;
+		}
 
-/*akhir header*/
+		/*akhir kepala*/
 
-/*bagian menu*/
-.wrap .menu{
-	background: rgb(78, 80, 78);
+		/*bagian menu*/
+		.wrap .menu{
+			background: rgb(78, 80, 78);
 
-}
+		}
 
-.wrap .menu ul{
-	padding: 0;
-	margin: 0;
-	background: rgb(68, 68, 68);
-	overflow: hidden;
-	text-decoration: none;
-}
+		.wrap .menu ul{
+			padding: 0;
+			margin: 0;
+			background: rgb(68, 68, 68);
+			overflow: hidden;
+			text-decoration: none;
+		}
 
-.wrap .menu ul li{
-	float: left;
-	list-style-type: none;
-	padding: 10px;
+		.wrap .menu ul li{
+			float: left;
+			list-style-type: none;
+			padding: 10px;
 
-}
+		}
 
-.wrap .menu ul li a{
-	color: white;
-	text-decoration: none;
+		.wrap .menu ul li a{
+			color: white;
+			text-decoration: none;
 
-}
+		}
 
 
-/*akhir menu*/
+		/*akhir menu*/
 
-.clear{
-	clear: both;
-}
+		.clear{
+			clear: both;
+		}
 
-.badan{
-	height: 450px;
-}
-/*bagian sidebar*/
-.wrap .badan .sidebar{
-	background: orange;
-	float: left;	
-	width: 25%;
-	height: 100%;
-}
+		.badan{
+			height: 450px;
+		}
+		/*bagian sidebar*/
+		.wrap .badan .sidebar{
+			background: orange;
+			float: left;	
+			width: 25%;
+			height: 100%;
+		}
 
-/*akhir sidebar*/
+		/*akhir sidebar*/
 
-.wrap .badan .content{
-	background: red;
-	float: left;
-	height: 100%;
-	width: 75%;	
-}
+		.wrap .badan .isi{
+			background: red;
+			float: left;
+			height: 100%;
+			width: 75%;	
+		}
 
-.wrap .footer{
-	width: 100%;
-	padding: 10px;
-}
+		.wrap .footer{
+			width: 100%;
+			padding: 30px;
+		}
     </style>
 </head>
 <body>
 	<div class="wrap">
-		<div class="header">			
+		<div class="kepala">			
 			<h1>Koding Asyik</h1>
 			<p>Tutorial belajar membuat layout website sederhana</p>
 		</div>
@@ -104,8 +107,8 @@
 					<li><a href="#">Tutorial JQuery dasar</a></li>				
 				</ul>
 			</div>
-			<div class="content">
-				content
+			<div class="isi">
+				isi
 			</div>
 		</div>
 		<div class="clear"></div>
