--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <style>
           footer{
-            background-color: #4aad84;
+            background-color: #3d7071;
             position: relative;
             margin-top: 100%;
             color: white;
@@ -15,9 +15,33 @@
             color: white;
           }
 
+          .row .berita1{
+            background-color: #e6d38b;
+            padding-left: 33px;
+            padding-top: 14px;
+            text-align: justify;
+            color: white;
+          }
+
+          .row .berita2{
+            background-color: #138f70;
+            padding-left: 10px;
+            padding-top: 14px;
+            text-align: justify;
+            color: white;
+          }
+          .row .berita3{
+            background-color: #850e3b;
+            padding-left: 10px;
+            padding-top: 14px;
+            text-align: justify;
+            color: white;
+          }
+
         </style>
     </head>
 <body>
+  <div class="">  
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: cadetblue;">
         <a class="navbar-brand" href="#">WEB BERITA</a>
@@ -55,7 +79,56 @@
         </div>
     </nav>
     <!--tutup nav-->
+  <div class="container-fluid">
+    <!-- slider -->
+    <div class="row">
+      <div class="col-md-8">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="https://image.freepik.com/free-vector/coronavirus-2019-ncov-virus-background-with-disease-cells-covid-19-corona-virus-outbreaking-pandemic-medical-health-risk-concept_139523-181.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://indrapermanahadi.files.wordpress.com/2015/12/goodgame_studios_001_1400x700.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
 
+    <br>
+    <br>
+    <!-- content -->
+    <div class="row">
+      <div class="col-md-4 berita1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptatum? Sit facilis esse maiores quae voluptatem voluptatum dicta deleniti sunt eveniet. Modi esse maiores suscipit, ipsa cupiditate hic ducimus atque.</p>
+      </div>
+      <div class="col-md-4 berita2">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci praesentium voluptate veniam. Quia inventore explicabo vero velit suscipit mollitia quas tempore repellat porro aperiam neque quasi, ullam et dolorem.</p>
+      </div>
+      <div class="col-md-4 berita3">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci praesentium voluptate veniam. Quia inventore explicabo vero velit suscipit mollitia quas tempore repellat porro aperiam neque quasi, ullam et dolorem.</p>
+      </div>
+    </div>
+    <!-- tutup content -->
+  </div>
     <!-- Footer -->
     <footer class="page-footer font-small indigo">
       <!-- Footer Links -->
@@ -159,6 +232,7 @@
 
     </footer>
     <!-- tutup Footer -->
+  </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
