--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendor/fontawesome/css/fontawesome.css">
         <link rel="stylesheet" href="vendor/fontawesome/css/all.css">
+        <link rel="stylesheet" href="css/whatsapp.css">
         <style>
           footer{
             background-color: #3d7071;
@@ -295,6 +296,9 @@
 
     </footer>
     <!-- tutup Footer -->
+
+    <a class="fixed-whatsapp" href="https://api.whatsapp.com/send?phone=+6282361001252 &text=Hallo Admin Saya Ingin Berkonsultasi untuk Membuat Sebuah Situs Website.." rel="nofollow noopener" target="blank" title="Whatsapp" />
+
   </div>
 
     <script src="js/jquery.js"></script>
